--- a/src/assets/scss/layout/_bg.scss
+++ b/src/assets/scss/layout/_bg.scss
@@ -41,7 +41,7 @@
 				'filter #{_duration(article)} ease-in-out'
 			));
 			background-image:		url('../../images/bg.jpg');
-			background-position:	center;
+			background-position:	top;
 			background-size:		cover;
 			background-repeat:		no-repeat;
 			z-index: 1;
