Changes picture of me.  Also updates the work section and about section

--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -38,7 +38,9 @@
 			&.active {
 				display: block !important;
 			}
-
+			.emphasis {
+				text-decoration: underline;
+			}
 			.close {
 				display: block;
 				position: absolute;
